--- a/engine0/style.css
+++ b/engine0/style.css
@@ -154,48 +154,7 @@
 }
 
 
-/* youtube/vimeo buttons */
-#wowslider-container0 .ws_video_btn {
-	position: absolute;
-	display: none;
-	cursor: pointer;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 55;
-}
-#wowslider-container0 .ws_video_btn.ws_youtube,
-#wowslider-container0 .ws_video_btn.ws_vimeo {
-	display: block;
-}
-#wowslider-container0 .ws_video_btn div {
-	position: absolute;
-	background-image: url(./playvideo.png);
-	background-size: 200%;
-	top: 50%;
-	left: 50%;
-	width: 7em;
-	height: 5em;
-	margin-left: -3.5em;
-	margin-top: -2.5em;
-}
-#wowslider-container0 .ws_video_btn.ws_youtube div {
-	background-position: 0 0;
-}
-#wowslider-container0 .ws_video_btn.ws_youtube:hover div {
-	background-position: 100% 0;
-}
-#wowslider-container0 .ws_video_btn.ws_vimeo div {
-	background-position: 0 100%;
-}
-#wowslider-container0 .ws_video_btn.ws_vimeo:hover div {
-	background-position: 100% 100%;
-}
 
-#wowslider-container0 .ws_playpause.ws_hide {
-	display: none !important;
-}
 #wowslider-container0 .ws_images { 
 	border-left: 0px;
 	border-right: 0px;
@@ -216,55 +175,9 @@
 #wowslider-container0 .ws_bullets a.ws_selbull, #wowslider-container0 .ws_bullets a:hover{
 	background-position: 0 100%;
 } 
-#wowslider-container0 a.ws_next, #wowslider-container0 a.ws_prev {
-	position:absolute;
-	bottom:0;
-	margin-top:-1.5em;
-	z-index:60;
-	height: 3em;
-	width: 3em;
-	background-image: url(./arrows.png);
-	background-size: 200%;
-}
-#wowslider-container0 a.ws_next{
-	background-position: 100% 0;
-	right:0.1em;
-}
-#wowslider-container0 a.ws_prev {
-	right:3.2em;
-	background-position: 0 0; 
-}
-#wowslider-container0 a.ws_next:hover{
-	background-position: 100% 100%;
-}
-#wowslider-container0 a.ws_prev:hover {
-	background-position: 0 100%; 
-}
 
-/*playpause*/
-#wowslider-container0 .ws_playpause {
-    width: 3em;
-    height: 3em;
-    position: absolute;
-    bottom: 0;
-    right: 6.4em;
-    margin-left: -1.5em;
-    margin-top: -1.5em;
-    z-index: 59;
-	background-size: 100%;
-}
 
-#wowslider-container0 .ws_pause {
-    background-image: url(./pause.png);
-}
-
-#wowslider-container0 .ws_play {
-    background-image: url(./play.png);
-}
-
-#wowslider-container0 .ws_pause:hover, #wowslider-container1 .ws_play:hover {
-    background-position: 100% 100% !important;
-}/* bottom center */
+/* bottom center */
 #wowslider-container0  .ws_bullets {
     bottom: 0;
 	left:50%;
@@ -283,26 +196,27 @@
 	z-index: 50;
 	font-weight: bold;
 }
-#wowslider-container0 .ws-title div,#wowslider-container0 .ws-title span{ 
-	display:inline-block; 
+#wowslider-container0 .ws-title div,#wowslider-container0 .ws-title span{
+	display:inline-block;
 	margin-top:0.5em;
 	background:none;
 	color: #ffffff;
-	font-weight: normal;	
+	font-weight: normal;
 	text-transform: capitalize;
-    text-shadow: 0 0.1em 0.25em rgba(0, 0, 0, 0.5);		
+	text-shadow: 0 0.1em 0.25em rgba(0, 0, 0, 0.5);
 	border-radius:0;
 	opacity:1;
 }
-#wowslider-container0 .ws-title div{ 
+#wowslider-container0 .ws-title div{
 	display:block;
-	margin-top:0.5em; 
+	margin-top:0.5em;
 	font-size: 3em;
 	padding-left: 10px;
 	line-height: 1em;
 }
 #wowslider-container0 .ws-title span{
 	padding:0.3em;
+	font-weight: 700;
 	line-height: 1.2em;
 }#wowslider-container0 .ws_images > ul{
 	animation: wsBasic 21.6s infinite;
